# vln-sim2real

./: Dockerfile  LICENSE  README.md  download_models.sh  start_agent.sh
description/: turtlebot_common_library.urdf.xacro
src/theta/: CMakeLists.txt  package.xml  theta_mock_server.py  theta_server.py
src/theta/launch/: theta.launch
src/vln_agent/: CMakeLists.txt  agent_relay.py  agent_server.py  nav_launcher.py  package.xml
src/vln_agent/R2R_EnvDrop/: model.py  utils.py
src/vln_agent/launch/: agent_nomap.launch  agent_wmap.launch  build_map.launch  hokuyo.launch  nav_stack.launch  robot_nomap.launch  robot_wmap.launch  sensor.launch  track.launch  track_demo.launch
src/vln_agent/maps/: coda-aligned.pgm  coda-viz.yaml  coda.pgm  coda.yaml
src/vln_agent/msg/: InstructionResult.msg
src/vln_agent/param/: costmap_common_params.yaml  laser_config.yaml  local_costmap_params.yaml  move_base_params.yaml
src/vln_agent/rviz/: eval_navigation.rviz  eval_navigation_multimaster.rviz  navigation.rviz
src/vln_agent/srv/: Instruction.srv
src/vln_evaluation/: CMakeLists.txt  custom_rosconsole.conf  dtw.py  eval.py  evaluation.py  mock_evaluation.py  package.xml  tf_filter.py  viz_paths.py  viz_subgoals.py
src/vln_evaluation/data/: R2R_coda.json
src/vln_evaluation/launch/: agent_eval_wmap.launch  eval_mock.launch  eval_nomap.launch  eval_wmap.launch  pc_nomap.launch
src/vln_subgoals/: CMakeLists.txt  Equirec2Perspec.py  cnn.py  mock_laser.py  package.xml  rotate_server.py  subgoal_coda_test.py  subgoal_mock_server.py  subgoal_server.py  subgoal_test.py
(+16 files in other folders)
