<?xml version="1.0"?>
<package format="2">
  <name>theta</name>
  <version>0.0.0</version>
  <description>Ricoh Theta V camera package, based on 
               https://github.com/jim-easterbrook/python-gphoto2 
               and libgphoto2. </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rail@todo.todo">rail</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
